// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a zoom component with additional css classes 1`] = `
<button
  aria-label="zoom-in.title"
  class="chakra-button chakra-tooltip__trigger tool-button zoom zoom-in testClass1 testClass2 css-19gwppe"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="zoom"
  dir="ltr"
  id="tooltip:«r2»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5v14"
    />
  </svg>
</button>
`;

exports[`should successfully create a zoom-in and zoom-out buttons 1`] = `
<button
  aria-label="zoom-in.title"
  class="chakra-button chakra-tooltip__trigger tool-button zoom zoom-in css-19gwppe"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="zoom-in"
  dir="ltr"
  id="tooltip:«r0»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5v14"
    />
  </svg>
</button>
`;

exports[`should successfully create a zoom-in and zoom-out buttons 2`] = `
<button
  aria-label="zoom-out.title"
  class="chakra-button chakra-tooltip__trigger tool-button zoom zoom-out css-19gwppe"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="zoom-out"
  dir="ltr"
  id="tooltip:«r1»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
  </svg>
</button>
`;
